wxc/include/ewxw/wxc_glue.h

void       wxWindow_AddConstraintReference( TSelf(wxWindow) _obj, TClass(wxWindow) otherWin );
void       wxWindow_CaptureMouse( TSelf(wxWindow) _obj );
void       wxWindow_Center( TSelf(wxWindow) _obj, int direction );
void       wxWindow_CenterOnParent( TSelf(wxWindow) _obj, int dir );
void       wxWindow_Clear( TSelf(wxWindow) _obj );
TBool      wxWindow_Close( TSelf(wxWindow) _obj, TBool _force );
void       wxWindow_ConvertDialogToPixels( TSelf(wxWindow) _obj, TPointOut(_x,_y) );
void       wxWindow_ConvertPixelsToDialog( TSelf(wxWindow) _obj, TPointOut(_x,_y) );
TClass(wxWindow) wxWindow_Create( TClass(wxWindow) _prt, int _id, TRect(_x,_y,_w,_h), int _stl );
void       wxWindow_DeleteRelatedConstraints( TSelf(wxWindow) _obj );
TBool      wxWindow_Destroy( TSelf(wxWindow) _obj );
TBool      wxWindow_DestroyChildren( TSelf(wxWindow) _obj );
TBool      wxWindow_Disable( TSelf(wxWindow) _obj );
int        wxWindow_DoPhase( TSelf(wxWindow) _obj, int phase );
TBoolInt   wxWindow_Enable( TSelf(wxWindow) _obj );
TClass(wxWindow) wxWindow_FindFocus( TSelf(wxWindow) _obj );
TClass(wxWindow) wxWindow_FindWindow( TSelf(wxWindow) _obj, TString name );
void       wxWindow_Fit( TSelf(wxWindow) _obj );
int        wxWindow_GetAutoLayout( TSelf(wxWindow) _obj );
void       wxWindow_GetBackgroundColour( TSelf(wxWindow) _obj, TClassRef(wxColour) _ref );
void       wxWindow_GetBestSize( TSelf(wxWindow) _obj, TSizeOutVoid(_w,_h) );
TClass(wxCaret) wxWindow_GetCaret( TSelf(wxWindow) _obj );
int        wxWindow_GetCharHeight( TSelf(wxWindow) _obj );
int        wxWindow_GetCharWidth( TSelf(wxWindow) _obj );
int        wxWindow_GetChildren( TSelf(wxWindow) _obj, void* _res, int _cnt );
TClass(wxClientData) wxWindow_GetClientData( TSelf(wxWindow) _obj );
void       wxWindow_GetClientSize( TSelf(wxWindow) _obj, TSizeOutVoid(_w,_h) );
void       wxWindow_GetClientSizeConstraint( TSelf(wxWindow) _obj, TSizeOut(_w,_h) );
TClass(wxLayoutConstraints) wxWindow_GetConstraints( TSelf(wxWindow) _obj );
void*      wxWindow_GetConstraintsInvolvedIn( TSelf(wxWindow) _obj );
TClass(wxCursor) wxWindow_GetCursor( TSelf(wxWindow) _obj );
TClass(wxDropTarget) wxWindow_GetDropTarget( TSelf(wxWindow) _obj );
TClass(wxEvtHandler) wxWindow_GetEventHandler( TSelf(wxWindow) _obj );
void       wxWindow_GetFont( TSelf(wxWindow) _obj, TClassRef(wxFont) _ref );
void       wxWindow_GetForegroundColour( TSelf(wxWindow) _obj, TClassRef(wxColour) _ref );
int        wxWindow_GetId( TSelf(wxWindow) _obj );
TStringLen wxWindow_GetLabel( TSelf(wxWindow) _obj, TStringOutVoid _buf );
int        wxWindow_GetMaxHeight( TSelf(wxWindow) _obj );
int        wxWindow_GetMaxWidth( TSelf(wxWindow) _obj );
int        wxWindow_GetMinHeight( TSelf(wxWindow) _obj );
int        wxWindow_GetMinWidth( TSelf(wxWindow) _obj );
TStringLen wxWindow_GetName( TSelf(wxWindow) _obj, TStringOutVoid _buf );
TClass(wxWindow) wxWindow_GetParent( TSelf(wxWindow) _obj );
void       wxWindow_GetPosition( TSelf(wxWindow) _obj, TPointOutVoid(_x,_y) );
void       wxWindow_GetPositionConstraint( TSelf(wxWindow) _obj, TPointOut(_x,_y) );
void       wxWindow_GetRect( TSelf(wxWindow) _obj, TRectOutVoid(_x,_y,_w,_h) );
int        wxWindow_GetScrollPos( TSelf(wxWindow) _obj, int orient );
int        wxWindow_GetScrollRange( TSelf(wxWindow) _obj, int orient );
int        wxWindow_GetScrollThumb( TSelf(wxWindow) _obj, int orient );
void       wxWindow_GetSize( TSelf(wxWindow) _obj, TSizeOutVoid(_w,_h) );
void       wxWindow_GetSizeConstraint( TSelf(wxWindow) _obj, TSizeOut(_w,_h) );
TClass(wxSizer) wxWindow_GetSizer( TSelf(wxWindow) _obj );
void       wxWindow_GetTextExtent( TSelf(wxWindow) _obj, TString string, int* x, int* y, int* descent, int* externalLeading, TClass(wxFont) theFont );
TStringLen wxWindow_GetToolTip( TSelf(wxWindow) _obj, TStringOutVoid _buf );
TClass(wxRegion) wxWindow_GetUpdateRegion( TSelf(wxWindow) _obj );
TClass(wxValidator) wxWindow_GetValidator( TSelf(wxWindow) _obj );
int        wxWindow_GetWindowStyleFlag( TSelf(wxWindow) _obj );
TBool      wxWindow_HasFlag( TSelf(wxWindow) _obj, int flag );
TBool      wxWindow_Hide( TSelf(wxWindow) _obj );
void       wxWindow_InitDialog( TSelf(wxWindow) _obj );
TBool      wxWindow_IsBeingDeleted( TSelf(wxWindow) _obj );
TBool      wxWindow_IsEnabled( TSelf(wxWindow) _obj );
TBool      wxWindow_IsExposed( TSelf(wxWindow) _obj, TRect(x,y,w,h) );
TBool      wxWindow_IsShown( TSelf(wxWindow) _obj );
TBool      wxWindow_IsTopLevel( TSelf(wxWindow) _obj );
int        wxWindow_Layout( TSelf(wxWindow) _obj );
int        wxWindow_LayoutPhase1( TSelf(wxWindow) _obj, int* noChanges );
int        wxWindow_LayoutPhase2( TSelf(wxWindow) _obj, int* noChanges );
void       wxWindow_Lower( TSelf(wxWindow) _obj );
void       wxWindow_MakeModal( TSelf(wxWindow) _obj, TBool modal );
void       wxWindow_Move( TSelf(wxWindow) _obj, TPoint(x,y) );
void       wxWindow_MoveConstraint( TSelf(wxWindow) _obj, TPoint(x,y) );
void*      wxWindow_PopEventHandler( TSelf(wxWindow) _obj, TBool deleteHandler );
int        wxWindow_PopupMenu( TSelf(wxWindow) _obj, TClass(wxMenu) menu, TPoint(x,y) );
void       wxWindow_PrepareDC( TSelf(wxWindow) _obj, TClass(wxDC) dc );
void       wxWindow_PushEventHandler( TSelf(wxWindow) _obj, TClass(wxEvtHandler) handler );
void       wxWindow_Raise( TSelf(wxWindow) _obj );
void       wxWindow_Refresh( TSelf(wxWindow) _obj, TBool eraseBackground );
void       wxWindow_RefreshRect( TSelf(wxWindow) _obj, TBool eraseBackground, TRect(x,y,w,h) );
void       wxWindow_ReleaseMouse( TSelf(wxWindow) _obj );
void       wxWindow_RemoveChild( TSelf(wxWindow) _obj, TClass(wxWindow) child );
void       wxWindow_RemoveConstraintReference( TSelf(wxWindow) _obj, TClass(wxWindow) otherWin );
void       wxWindow_ResetConstraints( TSelf(wxWindow) _obj );
void       wxWindow_ScreenToClient( TSelf(wxWindow) _obj, int* x, int* y );
void       wxWindow_ScrollWindow( TSelf(wxWindow) _obj, TVector(dx,dy) );
void       wxWindow_ScrollWindowRect( TSelf(wxWindow) _obj, TVector(dx,dy), TRect(x,y,w,h) );
void       wxWindow_SetAcceleratorTable( TSelf(wxWindow) _obj, TClass(wxAcceleratorTable) accel );
void       wxWindow_SetAutoLayout( TSelf(wxWindow) _obj, TBool autoLayout );
int        wxWindow_SetBackgroundColour( TSelf(wxWindow) _obj, TClass(wxColour) colour );
void       wxWindow_SetCaret( TSelf(wxWindow) _obj, TClass(wxCaret) caret );
void       wxWindow_SetClientData( TSelf(wxWindow) _obj, TClass(wxClientData) data );
void       wxWindow_SetClientSize( TSelf(wxWindow) _obj, TSize(width,height) );
void       wxWindow_SetConstraintSizes( TSelf(wxWindow) _obj, int recurse );
void       wxWindow_SetConstraints( TSelf(wxWindow) _obj, TClass(wxLayoutConstraints) constraints );
int        wxWindow_SetCursor( TSelf(wxWindow) _obj, TClass(wxCursor) cursor );
void       wxWindow_SetDropTarget( TSelf(wxWindow) _obj, TClass(wxDropTarget) dropTarget );
void       wxWindow_SetExtraStyle( TSelf(wxWindow) _obj, long exStyle );
void       wxWindow_SetFocus( TSelf(wxWindow) _obj );
int        wxWindow_SetFont( TSelf(wxWindow) _obj, TClass(wxFont) font );
int        wxWindow_SetForegroundColour( TSelf(wxWindow) _obj, TClass(wxColour) colour );
void       wxWindow_SetId( TSelf(wxWindow) _obj, int _id );
void       wxWindow_SetLabel( TSelf(wxWindow) _obj, TString _title );
void       wxWindow_SetName( TSelf(wxWindow) _obj, TString _name );
void       wxWindow_SetScrollPos( TSelf(wxWindow) _obj, int orient, int pos, TBool refresh );
void       wxWindow_SetSize( TSelf(wxWindow) _obj, TRect(x,y,width,height), int sizeFlags );
void       wxWindow_SetSizeConstraint( TSelf(wxWindow) _obj, TRect(x,y,w,h) );
void       wxWindow_SetSizeHints( TSelf(wxWindow) _obj, int minW, int minH, int maxW, int maxH, int incW, int incH );
void       wxWindow_SetSizer( TSelf(wxWindow) _obj, TClass(wxSizer) sizer );
void       wxWindow_SetToolTip( TSelf(wxWindow) _obj, TString tip );
void       wxWindow_SetValidator( TSelf(wxWindow) _obj, TClass(wxValidator) validator );
void       wxWindow_SetWindowStyleFlag( TSelf(wxWindow) _obj, long style );
TBool      wxWindow_Show( TSelf(wxWindow) _obj );
TBoolInt   wxWindow_TransferDataFromWindow( TSelf(wxWindow) _obj );
TBoolInt   wxWindow_TransferDataToWindow( TSelf(wxWindow) _obj );
void       wxWindow_UnsetConstraints( TSelf(wxWindow) _obj, void* c );
void       wxWindow_UpdateWindowUI( TSelf(wxWindow) _obj );
TBool      wxWindow_Validate( TSelf(wxWindow) _obj );
void       wxWindow_WarpPointer( TSelf(wxWindow) _obj, TPoint(x,y) );